objects/Proposal_Version__c.object
<CustomObject>
    <fields>
        <fullName>Clone_This_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone This Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Products__c</fullName>
        <label>No Of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Version_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>Proposal_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAmountRollup__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Product_Items__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Product_Items__c.Proposal_Version__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version_Name__c</fullName>
        <displayFormat>Version-{00}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </fields>
    <label>Enquiry Version</label>
    <nameField>
        <displayFormat>Version - {00}</displayFormat>
        <label>Proposal Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>